# mercator

./: AGENTS.md  Cargo.toml  README.md
.github/workflows/: ci.yml
docs/: HANDOFF_PLAN.md  HANDOFF_STATE.md  NEW_SESSION_PROMPT.md
src/: cli.rs  lib.rs  main.rs  model.rs  render.rs  rpc.rs
src/scanner/: bridgehub.rs  mod.rs
tests/: scan_bridgehub_ctms.rs
