[package]
name = "mercator"
version = "0.1.0"
edition = "2024"
rust-version = "1.90"
description = "A focused on-chain cartography CLI for mapping contract relationships and state"
license = "MIT"
repository = "https://github.com/EmilLuta/mercator"
readme = "README.md"
keywords = ["ethereum", "zksync", "cli", "web3", "indexing"]
categories = ["command-line-utilities", "cryptography::cryptocurrencies"]

[[bin]]
name = "mercator"
path = "src/main.rs"

[dependencies]
alloy-primitives = "1.4"
alloy-provider = { version = "1.6", default-features = false, features = ["reqwest", "reqwest-rustls-tls"] }
alloy-rpc-types-eth = { version = "1.6", default-features = false }
alloy-sol-types = "1.4"
clap = { version = "4.5", features = ["derive", "env"] }
hex = "0.4"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
thiserror = "2.0"
tokio = { version = "1.44", features = ["rt", "rt-multi-thread"] }

[dev-dependencies]
